--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
 	<div class="well">
 		<p><span class="text-primary"><b>Bonnie Nilsen's</span></b> repo.</p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://aatoz.github.io/sileo/">Add to Sileo</a>
+		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://bonnie39.github.io/repo/">Add to Sileo</a>
 	</div>
 </div>
 
